se agregó el carrucel y el mapa

--- a/estilo.css
+++ b/estilo.css
@@ -8,6 +8,13 @@
     height: 800px;
   }
 
+  /* mapa de google maps
+  .map{
+    margin: 20px;
+    align-items: center
+    
+} */
+
     /*Botones redes sociales*/
   
     .redesSociales {
