--- a/estilo.css
+++ b/estilo.css
@@ -40,6 +40,7 @@ iframe{
     width: 100%;
     padding: 30px;
     text-align: center;
+    flex-grow: 1;
 }
 
 #tarjetas{
@@ -47,7 +48,23 @@ iframe{
     flex-direction: row;
     justify-content:space-evenly;
     text-align: left;
+    flex-wrap: wrap;
 }
+
+#galeria .col-lg-4{
+    margin: 0 !important;
+    padding: 25px
+}
+#galeria img{
+    width: 100%;
+    height: 250px;
+}
+
+#galeria img:hover{
+    border: 5px solid white;
+}
+
+
 .btn-primary-1{
 position: absolute;
 bottom: 19px;
