--- a/estilo.css
+++ b/estilo.css
@@ -63,7 +63,7 @@ bottom: 19px;
     margin: 50px;
 }
 .formulario{
-    background-color: #828385;
+    background-color: #8fb3fa;
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -75,16 +75,38 @@ bottom: 19px;
     align-items: center;
 }
 .button{
-    margin: 10px;
+    padding: 10px;
+    height: 100%;
+    width: 100%;
+}
+
+.logos{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-bottom: 50px;
+}
+
+.logo_imagen{
+height: 100%;
+width: auto;
+}
+@media(max-width : 576px){
+    .logo_imagen{
+        height: 20px;
+        width: auto;
+        padding: 3px;
+    }
 }
 
 /*Botones redes sociales*/
 
 .redesSociales {
-    background-color: rgba(49, 34, 37, 0.05);
+    background-color: rgba(255, 255, 255, 0.05);
     display: grid;
     place-items: center;
-    height: 100vh;
+    height: 30vh;
     
 }
 
