--- a/estilo.css
+++ b/estilo.css
@@ -36,6 +36,10 @@ header {
     text-align: left;
     flex-wrap: wrap;
 }
+.premium{
+    width: auto;
+    background-color: #ff003c;
+}
 
 #galeria .col-lg-4{
     margin: 0 !important;
@@ -43,7 +47,7 @@ header {
 }
 #galeria img{
     width: 100%;
-    height: 250px;
+    height: auto;
 }
 
 #galeria img:hover{
