--- a/estilo.css
+++ b/estilo.css
@@ -118,7 +118,7 @@ bottom: 19px;
     font-family: Segoe;
     background-color: #cdcbcb;
     height: 80px;
-    flex: 40%;
+    flex-wrap: wrap;
 }
 
 .datosEmpresa{
@@ -128,6 +128,7 @@ bottom: 19px;
     justify-content: space-around;
     font-family: roboto;
     height: 80px;
+    flex-wrap: wrap;
 }
 
 .logo_logo{
