--- a/estilo.css
+++ b/estilo.css
@@ -231,3 +231,10 @@ width: auto;
     -webkit-text-fill-color: transparent;
     transition: all 265ms ease-in;
 }
+
+.pegado{
+    position: fixed;
+    top: 30px;
+    right: 60px;
+    z-index: 100;
+}
