--- a/estilo.css
+++ b/estilo.css
@@ -40,7 +40,7 @@ h1{
     background-color: #ffffff;
     height: auto;
     width: 100%;
-    padding: 30px;
+    /* padding: 30px; */
     text-align: center;
     flex-grow: 1;
 }
